# telegram_myweeks_life_bot

./: .flake8  .gitignore  Makefile  README.md  alembic.ini  babel.cfg  diff  docker-compose.test.yml  ed factory methods to eliminate circular imports  env.example  env.test.example  main.py  myweeks_life_bot.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  s methods from LifeCalculatorEngine  test_results.txt  test_results2.txt
.agent/rules/: bot-rules.md  commit-message-generation.md  git-quality-standards.md  python-coding-standards.md
alembic/: env.py
alembic/versions/: 0001_initial_migration.py  0002_add_user_subscriptions_table.py  0003_add_enums_for_subscription_type_and_notifications_day.py  0004_add_language_column_to_user_settings.py  0005_add_notification_frequency_settings.py  0006_normalize_notifications_day_to_lowercase.py  __init__.py
config/: handlers.yaml
config/workflows/: registration.yaml  settings.yaml
docs/: GIT_HOOKS.md  README.md  component-diagram.puml  container-diagram.puml  system-context-diagram.puml
locales/: messages.pot
scripts/: check_schema.py  compile_messages.py  fix_code_style.sh  install_service.sh  setup_database.py  view_database.py
src/: __init__.py  bootstrap.py  constants.py  enums.py  i18n.py
src/bot/: __init__.py  application.py  constants.py  event_listeners.py  handlers.py  notification_schedule.py  registry.py  scheduler.py
src/contracts/: __init__.py  i18n_service_protocol.py  life_calculator_protocol.py  notification_gateway_protocol.py  scheduler_port_protocol.py  user_repository_protocol.py  user_service_protocol.py
src/core/: __init__.py  di.py  dtos.py  enums.py  exceptions.py  life_calculator.py  life_tracker.py  message_context.py  messages.py  plugins.py  subscription_messages.py  templates.py  validation.py
src/database/: __init__.py  abstract_repository.py  constants.py  models.py  service.py  sqlite_repository.py
src/events/: __init__.py  domain_events.py  event_bus.py
src/scheduler/: __init__.py  client.py  commands.py  jobs.py  worker.py
src/services/: __init__.py  adapter.py  container.py  i18n_adapter.py  message_service.py  notification_service.py  validation_service.py
src/utils/: config.py  localization.py  logger.py
tests/: __init__.py  conftest.py  constants.py  test_bootstrap.py  test_i18n.py  test_sqlite_repository.py
tools/: migrate_messages_api.py
(+240 files in other folders)
